# ngap-asn-examples

./: README.md
asn-extract-from-docs/: README.md  asn-extract-steps  ngap-asn.txt
asn-sample-programs/: CMakeLists.txt  Makefile  Makefile.am.asn1convert  Makefile.am.libasncodec  Ngap_AMF-TNLAssociationSetupItem.c  Ngap_AMF-TNLAssociationSetupItem.h  Ngap_AMF-TNLAssociationSetupList.c  Ngap_AMF-TNLAssociationSetupList.h  Ngap_AMF-TNLAssociationToAddItem.c  Ngap_AMF-TNLAssociationToAddItem.h  Ngap_AMF-TNLAssociationToAddList.c  Ngap_AMF-TNLAssociationToAddList.h  Ngap_AMF-TNLAssociationToRemoveItem.c  Ngap_AMF-TNLAssociationToRemoveItem.h  Ngap_AMF-TNLAssociationToRemoveList.c  Ngap_AMF-TNLAssociationToRemoveList.h  Ngap_AMF-TNLAssociationToUpdateItem.c  Ngap_AMF-TNLAssociationToUpdateItem.h  Ngap_AMF-TNLAssociationToUpdateList.c  Ngap_AMF-TNLAssociationToUpdateList.h  Ngap_AMF-UE-NGAP-ID.c  Ngap_AMF-UE-NGAP-ID.h  Ngap_AMFConfigurationUpdate.c  Ngap_AMFConfigurationUpdate.h  Ngap_AMFConfigurationUpdateAcknowledge.c  Ngap_AMFConfigurationUpdateAcknowledge.h  Ngap_AMFConfigurationUpdateFailure.c  Ngap_AMFConfigurationUpdateFailure.h  Ngap_AMFName.c  Ngap_AMFName.h  Ngap_AMFPagingTarget.c  Ngap_AMFPagingTarget.h  Ngap_AMFPointer.c  Ngap_AMFPointer.h  Ngap_AMFRegionID.c  Ngap_AMFRegionID.h  Ngap_AMFSetID.c  Ngap_AMFSetID.h  Ngap_AMFStatusIndication.c  Ngap_AMFStatusIndication.h  (+1173 more)
ngap-nokia-asn-sample-program/: CMakeLists.txt  ProtcolExtension-Patch  README.md  bstrlib.c  common_ngap_asn.h  modified_main_asn.cpp  ngap-asn.txt
